--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
+		"release": "pnpm build && changeset publish",
 		"format": "prettier --write ."
 	},
 	"exports": {
