--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
+		},
+		"./runes": {
+		  "types": "./dist/runes/index.d.ts",
+      "svelte": "./dist/runes/index.js"
 		}
 	},
 	"files": [
