--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"url": "git+https://github.com/wobsoriano/svelte-instantdb.git"
 	},
 	"bugs": "https://github.com/wobsoriano/svelte-instantdb/issues",
-	"packageManager": "pnpm@9.10.0",
+	"packageManager": "pnpm@9.12.3",
 	"version": "0.1.6",
 	"scripts": {
 		"dev": "vite dev",
@@ -37,32 +37,32 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.0.0 || ^5.0.0-next.1"
+		"svelte": "^4.0.0 || ^5.0.0"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.27.8",
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/kit": "^2.5.26",
-		"@sveltejs/package": "^2.3.4",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@changesets/cli": "^2.27.9",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.7.3",
+		"@sveltejs/package": "^2.3.7",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.1",
-		"eslint": "^9.10.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
-		"globals": "^15.9.0",
+		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.11.0",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"publint": "^0.2.10",
-		"svelte": "^5.0.0-next.245",
-		"svelte-check": "^4.0.2",
-		"typescript": "^5.6.2",
-		"typescript-eslint": "^8.5.0",
-		"vite": "^5.4.4"
+		"prettier-plugin-svelte": "^3.2.7",
+		"publint": "^0.2.12",
+		"svelte": "^5.1.3",
+		"svelte-check": "^4.0.5",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.12.0",
+		"vite": "^5.4.10"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
-		"@instantdb/core": "^0.14.18"
+		"@instantdb/core": "^0.14.19"
 	}
 }
