--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
 		},
-		"./v0": {
-			"types": "./dist/v0/index.d.ts",
-			"svelte": "./dist/v0/index.js"
+		"./stores": {
+			"types": "./dist/stores/index.d.ts",
+			"svelte": "./dist/stores/index.js"
 		}
 	},
 	"files": [
