--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"version": "0.2.0",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && npm run package",
+		"build": "npm run package",
+		"build:playground": "vite build",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
