ci: write correct version

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "npm run package",
     "build:playground": "vite build",
     "preview": "vite preview",
-    "package": "svelte-kit sync && svelte-package && publint",
+    "write-version": "node ./scripts/prepublish.js",
+    "package": "svelte-kit sync && svelte-package && publint && npm run write-version",
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
