--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build": "npm run package",
     "build:playground": "vite build",
     "preview": "vite preview",
-    "write-version": "node ./scripts/prepublish.js",
-    "package": "svelte-kit sync && svelte-package && publint && npm run write-version",
+    "build:version": "vite build --config vite.version.ts",
+    "package": "svelte-kit sync && svelte-package && publint && npm run build:version",
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
